# flask_captcha2

./: .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  README.rst  TODO.md  dev-req.txt  dev-requirements.txt  dev.md  pyproject.toml  requirements.txt  setup.py
docs/: conf.py  flask_captcha2.LocalCaptcha.Voice.rst  flask_captcha2.rst  index.rst  modules.rst
docs/docs/: flask_captcha2.GoogleCaptcha.rst  flask_captcha2.LocalCaptcha.Image.rst  flask_captcha2.LocalCaptcha.rst  modules.rst
example/ImageCaptcha/: app.py
example/ImageCaptcha/templates/: login.html
example/google-both-v2andv3/: README.md  app.py  requirements.txt
example/google-both-v2andv3/templates/: login.html
example/google_captcha2/: README.md  app.py
example/google_captcha2/templates/: login.html
example/google_captcha3/: README.md  app.py  requirements.txt
example/google_captcha3/templates/: login.html
example/image-session-captcha/: app.py
example/image-session-captcha/templates/: login.html
flask_captcha2/: CaptchaClass.py  Logger.py  __init__.py  auther.py  captcha_classes.py  excep.py  logger.py
flask_captcha2/GoogleCaptcha/: Captcha3.py  __init__.py  captcha2.py  captcha3.py  utils.py
flask_captcha2/Local/ImageCaptcha/: __init__.py  driver.py  excp.py  utils.py
flask_captcha2/LocalCaptcha/: __init__.py
flask_captcha2/LocalCaptcha/Image/: __init__.py  driver.py  img.py
flask_captcha2/google_captcha/: __init__.py  abstract_captcha.py  captcha2.py  captcha3.py  utils.py
flask_captcha2/local_captcha/: __init__.py
flask_captcha2/local_captcha/Image/: img.py
flask_captcha2/local_captcha/image/: __init__.py  image.py  img.py
flask_captcha2/mixins/: logger_mixins.py
tests/: conftest.py  run-coverage.bat  run-coverage.sh  run-pytest.bat  run-pytest.sh
tests/captchaV2/: test_google_captcha2.py
tests/captchaV3/: test_google_captcha3.py
tests/google-captcha-v2/: test_google_captcha2.py  test_google_captcha2_hidden.py  test_google_captcha2_simple.py
tests/google-captcha-v3/: test_google_captcha3.py
