[project]
name = "Flask-captcha2"
version = "3.1.0"
description = "Flask plugin to integrate Google captcha (version 2, 3) and local captcha (image, voice) with Flask applications"
readme = "README.md"
authors = [
    { name = "ali sharify", email = "alisharifyofficial@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = [
    "flask security",
    "Google captcha for flask",
    "captcha",
    "flask",
    "flask-captcha",
    "flask-captcha2",
    "flask_captcha2",
    "flask-images-captcha"
]
dependencies = [
    "flask>=2.2.5",
    "markupsafe>=2.1.2",
    "requests>=2.30.0",
    "captcha>=0.5.0"
]

[project.urls]
Homepage = "https://github.com/alisharify7/flask_captcha2"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.classifiers]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Environment :: Web Environment",
    "Topic :: Security",
    "Topic :: Internet :: WWW/HTTP",
    "Framework :: Flask"
]

[tool.black]
line-length = 79
target-version = ['py37', 'py38', 'py39', 'py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | venv
  | .venv
)/
'''